[package]
name = "dryw"
version = "0.1.0"
authors = ["Matt Spraggs <matthew.spraggs@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
debug_bytecode = []
debug_trace = []
debug_stress_gc = []
debug_trace_gc = []