[package]
name = "yarel"
version = "0.1.0"
authors = ["Matt Spraggs <matthew.spraggs@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench"
harness = false

[dependencies]

[features]
#default = ["debug_bytecode", "debug_trace"]
debug_bytecode = []
debug_trace = []
debug_stress_gc = []
debug_trace_gc = []
more_vm_safety = []
